--- a/SmartEcoA/ClientApp/src/assets/locale/en.json
+++ b/SmartEcoA/ClientApp/src/assets/locale/en.json
@@ -7,8 +7,8 @@
     "LastPageLabel": "Last page"
   },
   "AreYouSureDeleteThisRecord": "Are you sure to delete this record?",
-  "Users": {
-    "PasswordChanged": "Password changed!",
-    "NewUserRegistered": "New user registered"
-  }
+  //"Users": {
+  //  "PasswordChanged": "Password changed!",
+  //  "NewUserRegistered": "New user registered"
+  //}
 }
