--- a/SmartEcoA/ClientApp/src/assets/locale/kk.json
+++ b/SmartEcoA/ClientApp/src/assets/locale/kk.json
@@ -7,8 +7,8 @@
     "LastPageLabel": "Соңғы бет"
   },
   "AreYouSureDeleteThisRecord": "Сіз бұл жазбаны өшіресіз бе??",
-  "Users": {
-    "PasswordChanged": "Пароль өзгертілді!",
-    "NewUserRegistered": "Жаңа қолданушы тіркелді"
-  }
+  //"Users": {
+  //  "PasswordChanged": "Пароль өзгертілді!",
+  //  "NewUserRegistered": "Жаңа қолданушы тіркелді"
+  //}
 }
