--- a/SmartEcoA/ClientApp/src/assets/locale/ru.json
+++ b/SmartEcoA/ClientApp/src/assets/locale/ru.json
@@ -7,8 +7,8 @@
     "LastPageLabel": "Последняя страница"
   },
   "AreYouSureDeleteThisRecord": "Вы уверены, что хотите удалить эту запись?",
-  "Users": {
-    "PasswordChanged": "Пароль изменён!",
-    "NewUserRegistered": "Новый пользователь зарегистрирован"
-  }
+  //"Users": {
+  //  "PasswordChanged": "Пароль изменён!",
+  //  "NewUserRegistered": "Новый пользователь зарегистрирован"
+  //}
 }
