--- a/SmartEcoA/ClientApp/src/i18n/messages.ru.xlf
+++ b/SmartEcoA/ClientApp/src/i18n/messages.ru.xlf
@@ -35,6 +35,16 @@
           <context context-type="sourcefile">app/locale/index.component.html</context>
           <context context-type="linenumber">2</context>
         </context-group>
+      </trans-unit><trans-unit id="NewUserRegistered" datatype="html">
+        <source>
+  New user registered
+</source><target state="final">
+  Новый пользователь зарегистрирован
+</target>
+        <context-group purpose="location">
+          <context context-type="sourcefile">app/users/registerinfo.component.html</context>
+          <context context-type="linenumber">1</context>
+        </context-group>
       </trans-unit><trans-unit id="CreateANewAccount" datatype="html">
         <source>Create a new account.</source><target state="final">Создать новый аккаунт.</target>
         <context-group purpose="location">
