--- a/SmartEcoA/ClientApp/src/i18n/messages.xlf
+++ b/SmartEcoA/ClientApp/src/i18n/messages.xlf
@@ -91,6 +91,15 @@
           <context context-type="linenumber">2</context>
         </context-group>
       </trans-unit>
+      <trans-unit id="NewUserRegistered" datatype="html">
+        <source>
+  New user registered
+</source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">app/users/registerinfo.component.html</context>
+          <context context-type="linenumber">1</context>
+        </context-group>
+      </trans-unit>
       <trans-unit id="CreateANewAccount" datatype="html">
         <source>Create a new account.</source>
         <context-group purpose="location">
