Translates: Bug fix (remove comments from translates files)

--- a/SmartEcoA/ClientApp/src/assets/locale/en.json
+++ b/SmartEcoA/ClientApp/src/assets/locale/en.json
@@ -6,9 +6,5 @@
     "NextPageLabel": "Next page",
     "LastPageLabel": "Last page"
   },
-  "AreYouSureDeleteThisRecord": "Are you sure to delete this record?",
-  //"Users": {
-  //  "PasswordChanged": "Password changed!",
-  //  "NewUserRegistered": "New user registered"
-  //}
+  "AreYouSureDeleteThisRecord": "Are you sure to delete this record?"
 }
